fix typing errors

--- a/Prototyping.ipynb
+++ b/Prototyping.ipynb
@@ -2126,8 +2126,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8657a5be-8709-49a3-8ace-d16583887520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cupy as np\n",
+    "from numba import cuda, float32, complex64\n",
+    "\n",
+    "def einsum_gpu(array1, array2, TPB_x = 32):\n",
+    "    '''\n",
+    "    Performs the matrix contraction '...ij,...jk->...ik'\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        array1 : ndarray\n",
+    "            n-dimensional array, where the last two dimension sizes are 3\n",
+    "        array2 : ndarray\n",
+    "            n-dimensional array where the last two dimensions sizes are 3\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "        array_out : ndarray\n",
+    "            n-dimensional array of the same shape as array1 & array 2\n",
+    "    '''\n",
+    "    shape = array1.shape\n",
+    "    #reshape arrays to [NumZ*NumY*NumX, 3, 3]\n",
+    "    array1 = np.reshape(array1, (-1,3,3))\n",
+    "    array2 = np.reshape(array2, (-1,3,3))\n",
+    "    #allocate array to return\n",
+    "    array_out = cuda.device_array(array1.shape,dtype=np.float32)\n",
+    "\n",
+    "    #define TPB and BPG for execution on GPU\n",
+    "    threadsperblock = (TPB_x, 3, 3)\n",
+    "    blockspergrid = (int(np.ceil(array1.shape[0]/TPB_x)), 1, 1)\n",
+    "    einsum_kernel[blockspergrid, threadsperblock](array1, array2, array_out)\n",
+    "    # reshape to [NumZ, NumY, NumX, 3, 3]\n",
+    "    array_out = np.reshape(array_out,shape)\n",
+    "    return array_out\n",
+    "\n",
+    "@cuda.jit\n",
+    "def einsum_kernel(A,B,C):\n",
+    "    '''\n",
+    "    Cuda kernel for matrix multiplication of size [N, 3, 3]. \n",
+    "    Performs the matrix contraction 'aij,ajk->aik'.\n",
+    "         \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    \n",
+    "    A : cuda or cupy array\n",
+    "        Input array 1\n",
+    "    B : cuda or cupy array\n",
+    "        Input array 2\n",
+    "    C : cuda or cupy array\n",
+    "        Output array\n",
+    "    \n",
+    "    '''\n",
+    "    x, y, z = cuda.grid(3)\n",
+    "\n",
+    "    ty = cuda.threadIdx.y\n",
+    "    tz = cuda.threadIdx.z\n",
+    "    \n",
+    "    stride, _, _ = cuda.gridsize(3)    # blocks per grid\n",
+    "    for pos in range(x,A.shape[0],stride):\n",
+    "        C[pos, ty, tz] = A[pos, ty, 0] * B[pos, 0, tz] + A[pos, ty, 1] * B[pos, 1, tz] + A[pos, ty, 2] * B[pos, 2, tz]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "56d6922f-9b77-480b-9fa5-92ea93b2d158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1 = np.random.rand(1,2048,2048,3,3,dtype=np.float32)\n",
+    "array2 = np.random.rand(1,2048,2048,3,3,dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4a90fa4b-ba43-4288-a246-a203e3c2cbfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.14 ms ± 12.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit einsum_gpu(array1,array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5763118-040f-48ec-b9b9-0fbdd0f9e7cf",
    "metadata": {},
    "outputs": [],
    "source": []
